--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
     "@angular/router": "~10.0.6",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.10.3",
+
+    "@angular/localize": "10.0.11",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+
+    "@angular/material": "^10.1.3",
+    "@angular/cdk": "^10.1.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.5",
